always show vertical scrollbar to avoid content shift

--- a/frontend/src/Content/Layout/layout-core.less
+++ b/frontend/src/Content/Layout/layout-core.less
@@ -80,7 +80,7 @@ body {
   // styling to visually wrap the component
   border-top: 1px solid rgba(0,0,0,.15);
   margin-top: -1px;
-  overflow-y: auto;
+  overflow-y: scroll;
   height: 100%;
 
   > h3,
